# playgauntlet

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  app.py  index.html  items.json  pyproject.toml  release-please-config.json  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/decisions/: 2026-06-29-standalone-release-profile.md  README.md  template.md
tests/: test_smoke.py
