[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playgauntlet"
version = "0.1.0"
description = "Local-first Python web app for gamified retrieval-practice study runs."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Toby Rosen" }
]
dependencies = []
keywords = ["study", "retrieval-practice", "spaced-repetition", "web-app", "exam-prep"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Education"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.urls]
Homepage = "https://github.com/tobyrosen/playgauntlet"
Issues = "https://github.com/tobyrosen/playgauntlet/issues"
Releases = "https://github.com/tobyrosen/playgauntlet/releases"

[tool.setuptools]
py-modules = ["app"]
